--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/oxekim7dpn5n/public_html/gbd-test
-    - /bin/cp -R applications/gbdadmin/config/production/config.php $DEPLOYPATH
-    - /bin/cp -R applications/goelbookdepot/config/production/config.php $DEPLOYPATH
+    - /bin/cp -R applications/gbdadmin/views $DEPLOYPATH
